.provarCaches/00Df2000001KKNJEA4/objects/Incap311SC__X311_Console_Shortcut__mdt.object
<CustomObject>
    <fields>
        <fullName>Incap311SC__Color__c</fullName>
        <description>The colour for the shortcut. Must use one of the following Salesforce Lightning Design themes.</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neutral</fullName>
                    <default>true</default>
                    <label>Neutral</label>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Destructive</fullName>
                </value>
                <value>
                    <fullName>Inverse</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311SC__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Link_Type__c</fullName>
        <description>Decide if the link is meant to be in the internal hostname or external</description>
        <label>Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Shortcut</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311SC__Link__c</fullName>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>311 Console Shortcut</label>
    <pluralLabel>311 Console Shortcuts</pluralLabel>
</CustomObject>